tests/negative/contexts/with_wrong_structural_context.orng
// with_wrong_structural_context.orng:11:24: error: missing context `My_Context`
//         use_my_context()
//                       ^
// 
context My_Context = Int

context My_Other_Context = Int

fn main() -> Int {
    with My_Other_Context(30) {
        use_my_context()
    }
}

fn use_my_context() -> Int with My_Context {
    My_Context
}